[tool.poetry]
name = "yezdi"
version = "0.1.0"
description = "Convert text to sequence diagrams"
authors = ["Rag Sagar <ragsagar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.4.2"
ipython = "^7.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
